fixing profile pic spacing for mobile

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -7,11 +7,25 @@
     transition: all 0.5s ease;
 }
 
+.profile-pic-mobile {
+    border-radius: 50%;
+    width: 100%; /* Set image width to 100% of its container */
+    max-width: 15rem; /* Set a maximum width for the image */
+    height: auto; /* Let the height adjust automatically */
+    padding-right: 0.5rem;
+    transition: all 0.5s ease;
+}
+
+@media (min-width: 769px) {
+    .profile-pic-mobile {
+        display: none;
+    }
+}
+
 /* Media query for screens with a maximum width of 768px (typical mobile devices) */
 @media (max-width: 768px) {
     .profile-pic {
-        max-width: 10rem; /* Adjust the maximum width for mobile */
-        height: auto; /* Let the height adjust automatically */
+        display:none;
     }
 }
 
